edit docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     working_dir: /usr/src/app
     volumes:
       - .:/usr/src/app
-    command: npm run start:dev
+    command: [ 'sleep', 'infinity' ]
     environment:
       - DB_HOST=db
       - DB_PORT=5432
@@ -24,8 +24,6 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: example
       POSTGRES_DB: simply_shopping
-    ports:
-      - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
     networks:
@@ -33,6 +31,7 @@ services:
 
 volumes:
   db-data:
+
 
 networks:
   simply-shopping-network:
