--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+this updated compose:
+
 services:
   app:
     build: .
@@ -7,30 +9,30 @@ services:
       - .:/usr/src/app
     command: [ 'sleep', 'infinity' ]
     environment:
-      - DB_HOST=db
+      - DB_HOST=database
       - DB_PORT=5432
       - DB_USER=postgres
       - DB_PASSWORD=123
       - DB_NAME=simply_shopping
     depends_on:
-      - db
+      - database
     networks:
       - simply-shopping-network
 
-  db:
+  database:
     image: public.ecr.aws/docker/library/postgres:15
-    container_name: simply-shopping-db
+    container_name: simply-shopping-database
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
       POSTGRES_DB: simply_shopping
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - database-data:/var/lib/postgresql/data
     networks:
       - simply-shopping-network
 
 volumes:
-  db-data:
+  database-data:
 
 
 networks:
